delete old style insertion

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <button>Shop The Hottest Food</button>
         </div>
     </section>
+    <section>
+        <img src="../../../../../.." alt="">
+    </section>
 </body>
 
 </html>
