--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good food Restaurant</title>
-    <link rel="stylesheet" href="/colorful/color.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,13 +14,36 @@
         <div class="hero-content">
             <p class="subtitle">Savor the Flavors</p>
             <h1 class="title">Experience Culinary Excellence food Experience</h1>
-            <p class="description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+            <p class="description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                piece of classical
                 Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
-            <button>Shop The Hottest Food</button>
+            <div class="btn-container">
+                <button class="btn">Shop The Hottest Food</button>
+            </div>
         </div>
     </section>
-    <section>
-        <img src="../../../../../.." alt="">
+
+    <section id="card-box">
+        <div class="container">
+            <div class="title">
+                <p class="subtitle">Savor the Flavors</p>
+                <h1 class="title">Experience Culinary Excellence food Experience</h1>
+            </div>
+
+            <div>
+                <div class="card">
+                    <div>
+                        <img src="assets/pizza.png" alt="">
+                    </div>
+                    <div>
+                        <span>Pizza Burg</span>
+                    </div>
+                    <h1>Up To 50% Off</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button>Watch all Sell</button>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
