--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </section>
 
-    <section id="card-box">
+    <!-- <section id="card-box">
         <div class="container">
             <div class="title">
                 <p class="subtitle">Savor the Flavors</p>
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 </body>
 
 </html>
