--- a/index.html
+++ b/index.html
@@ -25,22 +25,44 @@
 
     <section id="card-box">
         <div class="container">
-            <div class="title">
+            <div class="info">
                 <p class="subtitle">Savor the Flavors</p>
                 <h1 class="title">Experience Culinary Excellence food Experience</h1>
             </div>
 
-            <div>
+            <div class="card-container">
                 <div class="card">
-                    <div>
+                    <div class="image-box">
                         <img src="assets/pizza.png" alt="">
                     </div>
-                    <div>
+                    <div class="shop">
                         <span>Pizza Burg</span>
                     </div>
                     <h1>Up To 50% Off</h1>
                     <p>Lorem ipsum dolor sit amet.</p>
-                    <button>Watch all Sell</button>
+                    <button class="btn">Watch all Sell</button>
+                </div>
+                <div class="card">
+                    <div class="image-box">
+                        <img src="assets/pizza.png" alt="">
+                    </div>
+                    <div class="shop">
+                        <span>Pizza Burg</span>
+                    </div>
+                    <h1>Up To 50% Off</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button class="btn">Watch all Sell</button>
+                </div>
+                <div class="card">
+                    <div class="image-box">
+                        <img src="assets/pizza.png" alt="">
+                    </div>
+                    <div class="shop">
+                        <span>Pizza Burg</span>
+                    </div>
+                    <h1>Up To 50% Off</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button class="btn">Watch all Sell</button>
                 </div>
             </div>
         </div>
